--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
@@ -20,6 +19,7 @@
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-native": "^0.64.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.9.2",
