--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "native-base": "^3.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "^0.64.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-paper": "^4.9.2",
@@ -28,10 +29,13 @@
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.6.2"
+    "react-native-webview": "11.6.2",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5",
+    "react-native-svg": "12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
