--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
-    "react-native-svg": "12.1.1"
+    "expo-contacts": "~9.2.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
