--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~42.0.1",
+    "expo-contacts": "~9.2.5",
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "moment": "^2.29.1",
     "native-base": "^3.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -32,8 +34,7 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2",
     "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5",
-    "expo-contacts": "~9.2.5"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
