--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2",
     "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "expo-sms": "~9.2.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
